force-app/main/default/objects/Cost_Associate__c/Cost_Associate__c.object-meta.xml
<CustomObject>
    <label>Cost Associate</label>
    <nameField>
        <label>Cost Associate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Associates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>