force-app/main/default/objects/Cost_Associate__c/fields/Applications__c.field-meta.xml
<CustomField>
    <fullName>Applications__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applications</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Cost Associates</relationshipLabel>
    <relationshipName>Cost_Associates</relationshipName>
    <type>Lookup</type>
</CustomField>