force-app/main/default/objects/Cost_Associate__c/fields/Budget_Total__c.field-meta.xml
<CustomField>
    <fullName>Budget_Total__c</fullName>
    <formula>Budget_Year_1__c  +  Budget_Year_2__c  +  Budget_Year_3__c  +  Budget_Year_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>