force-app/main/default/objects/Cost_Associate__c/fields/Budget_Year_3__c.field-meta.xml
<CustomField>
    <fullName>Budget_Year_3__c</fullName>
    <inlineHelpText>IN GBP</inlineHelpText>
    <label>Budget Year 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>