force-app/main/default/objects/Cost_Associate__c/fields/Cost_Associated_Based_on_Country__c.field-meta.xml
<CustomField>
    <fullName>Cost_Associated_Based_on_Country__c</fullName>
    <label>Cost Associated Based on Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>