force-app/main/default/objects/Cost_Associate__c/fields/Expense_Description__c.field-meta.xml
<CustomField>
    <fullName>Expense_Description__c</fullName>
    <label>Expense Description</label>
    <type>TextArea</type>
</CustomField>