force-app/main/default/objects/Cost_Associate__c/fields/Host_Institution__c.field-meta.xml
<CustomField>
    <fullName>Host_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Host Institution (of the person receiving the funds)</inlineHelpText>
    <label>Host Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cost Associates</relationshipLabel>
    <relationshipName>Cost_Associates</relationshipName>
    <type>Lookup</type>
</CustomField>