force-app/main/default/objects/Cost_Associate__c/fields/Justification_for_Support_Request__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Support_Request__c</fullName>
    <label>Justification for Support Requested</label>
    <type>TextArea</type>
</CustomField>