force-app/main/default/objects/Cost_Associate__c/fields/Name_of_Host_Institution__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Host_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of Host Institution (of the person receiving the funds)</inlineHelpText>
    <label>Name of Host Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cost Associates (Name of Host Institution)</relationshipLabel>
    <relationshipName>Cost_Associates1</relationshipName>
    <type>Lookup</type>
</CustomField>