force-app/main/default/objects/Cost_Associate__c/fields/Principal_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Investigator</label>
    <referenceTo>Investigator__c</referenceTo>
    <relationshipLabel>Cost Associates</relationshipLabel>
    <relationshipName>Cost_Associates</relationshipName>
    <type>Lookup</type>
</CustomField>